--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-log",
+  "name": "log",
   "version": "1.0.0",
   "description": "Simple categorical log system for node",
   "main": "index.js",
